--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,13 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-navbar:
-  - name: Accueil
-    link: index.md
-  - name: Page 2
-    link: page2.md
+# Navigation links
+header_pages:
+  - title: Home
+    url: /
+  - title: About
+    url: /about
+  - title: Projects
+    url: /projects
 
 css: /style.css
